--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html>
   <head>
     <title>Calculator</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+
   </head>
   <body>
-    <h1>Calculator</h1>
+    <div class="container">
+      <h1>Calculator</h1>
+      <form id="calculator">
+        <div class="form-group">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
+        </div>
+        <button type="submit" id="add" class="btn">Add</button>
+        <button type="submit" id="subtract" class="btn">Subtract</button>
+        <button type="submit" id="multiply" class="btn">Multiply</button>
+        <button type="submit" id="divide" class="btn">Divide</button>
+      </form>
+      <div id="output">
 
-    <script src="js/scripts.js"></script>
+      </div>
+
+
+  </div>
   </body>
 </html>
