update README and used branching to return results to user

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
-      <form id="calculator">
+      <form id="calc_form">
         <div class="form-group">
           <label for="input1">1st number:</label>
           <input id="input1" class="form-control" type="text">
@@ -25,8 +25,8 @@
         <button type="submit" id="multiply" class="btn">Multiply</button>
         <button type="submit" id="divide" class="btn">Divide</button>
       </form>
-      <div id="output">
-
+      <div>
+        <span class="output"></span>
       </div>
 
 
