--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button type="submit" id="multiply" class="btn">Multiply</button>
         <button type="submit" id="divide" class="btn">Divide</button>
       </form>
-      <div>
+      <div class="well">
         <span class="output"></span>
       </div>
 
